--- a/json-to-view.csproj
+++ b/json-to-view.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>json_to_view</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.11" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
